# My_Focus

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: README.zh.md
resources/tesseract/: README.md
scripts/: check_deployment.bat  copy_tesseract_files.bat  download_tesseract.ps1
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: application_activity.rs  focus_session.rs  mod.rs  task.rs  user_settings.rs
src-tauri/src/services/: ai_service.rs  mod.rs  monitor_service.rs  report_service.rs  storage_service.rs  timer_service.rs
src/assets/css/: styles.css
src/assets/js/: app.js  tauri-api.js
